CHANGES.txt - 2011-08-11
------------------------

CHANGES IN CUPS V1.5.1

	- Documentation updates (STR #3885)
	- The IPP backend incorrectly reported spool-area-full states.
	- cupsMarkOptions() did not protect against a bad PPD that was missing
	  one or more standard Duplex options.
	- The PostScript filter did not mirror N-up output properly.
	- The ipptool program did not validate UTF-8 strings in XML output.
	- Fixed supply level reporting for some printers.
	- The scheduler no longer automatically logs debug messages for jobs
	  that were held or canceled.
	- The cupsSendRequest function did not flush remaining response data
	  from a previous request, leading to apparent chunking issues.
	- The scheduler did not report the correct version in the Server: header
	  (STR #3903)
	- The scheduler did not support 1284 device IDs reported by driver
	  interface programs longer than 127 characters (STR #3871)
	- The image filters did not support loading images larger than the
	  RIPCache setting (STR #3901)
	- "PAGE: total NNN" messages did not get logged properly (STR #3887)
	- Updated the PWG Raster support to conform to the current draft of the
	  PWG Raster Format specification.
	- The PWG Raster filter did not always write the correct number of
	  padding lines on the bottom of the page (STR #3904)
	- When reporting a denial-of-service attack from the domain socket, the
	  address reported does not always contain the correct path (STR #3888)
	- Badly formed GIF files could cause the image filters to crash
	  (STR #3914)
	- Jobs canceled at the printer were retried by the IPP backend.
	- "cupsfilter -u" deleted the input file instead of the PPD file.
	- The scheduler did not compute the cost of PPD filters defined using
	  the cupsFilter2 keyword properly.
	- The scheduler did not correctly support the maxsize() attribute for
	  PPD filters.


CHANGES IN CUPS V1.5.0

	- Documentation updates.
	- Localization update (STR #3865)